--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
 	<div class="container">
 	<div class="row">
-	<div class="col-sm-6 col-md-3">
+	<div class="col-xs-12 col-sm-6 col-lg-3">
 		<h2 class="text-center brand-color h2-border">lorem5<hr></h2>
 	</div>
-		<div class="col-sm-6 col-md-3">dfd</div>
-		<div class="col-sm-6 col-md-3">sss</div>
-		<div class="col-sm-6 col-md-3">hhhhhhhh</div>
+		<div class="col-xs-12 col-sm-6 col-lg-3">dfd</div>
+		<div class="col-xs-12 col-sm-6 col-lg-3">sss</div>
+		<div class="col-xs-12 col-sm-6 col-lg-3">hhhhhhhh</div>
 	</div>
 	</div>
 </body>
